logs/dag_id=Read_and_load_of_API_to_MySQLDB/run_id=scheduled__2024-02-04T000000+0000/task_id=Load_companies_registers/attempt=4.log
[2024-02-15T19:51:58.546+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Read_and_load_of_API_to_MySQLDB.Load_companies_registers scheduled__2024-02-04T00:00:00+00:00 [queued]>
[2024-02-15T19:51:58.629+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Read_and_load_of_API_to_MySQLDB.Load_companies_registers scheduled__2024-02-04T00:00:00+00:00 [queued]>
[2024-02-15T19:51:58.641+0000] {taskinstance.py:2170} INFO - Starting attempt 4 of 9
[2024-02-15T19:51:58.755+0000] {taskinstance.py:2191} INFO - Executing <Task(_PythonDecoratedOperator): Load_companies_registers> on 2024-02-04 00:00:00+00:00
[2024-02-15T19:51:58.774+0000] {standard_task_runner.py:60} INFO - Started process 922 to run task
[2024-02-15T19:51:58.778+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Read_and_load_of_API_to_MySQLDB', 'Load_companies_registers', 'scheduled__2024-02-04T00:00:00+00:00', '--job-id', '313', '--raw', '--subdir', 'DAGS_FOLDER/CRM.py', '--cfg-path', '/tmp/tmp3581j33c']
[2024-02-15T19:51:58.807+0000] {standard_task_runner.py:88} INFO - Job 313: Subtask Load_companies_registers
[2024-02-15T19:51:59.006+0000] {task_command.py:423} INFO - Running <TaskInstance: Read_and_load_of_API_to_MySQLDB.Load_companies_registers scheduled__2024-02-04T00:00:00+00:00 [running]> on host c35f28e50200
[2024-02-15T19:51:59.255+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='jmoc' AIRFLOW_CTX_DAG_ID='Read_and_load_of_API_to_MySQLDB' AIRFLOW_CTX_TASK_ID='Load_companies_registers' AIRFLOW_CTX_EXECUTION_DATE='2024-02-04T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='4' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-04T00:00:00+00:00'
[2024-02-15T19:51:59.328+0000] {base.py:83} INFO - Using connection ID 'mysql_connection' for task execution.
[2024-02-15T19:51:59.355+0000] {sql.py:450} INFO - Running statement: INSERT IGNORE INTO ***_PI.companies(name, catchPhrase, bs) VALUES ('Romaguera-Crona','Multi-layered client-server neural-net', 'harness real-time e-markets'), parameters: None
[2024-02-15T19:51:59.365+0000] {sql.py:459} INFO - Rows affected: 0
[2024-02-15T19:51:59.386+0000] {base.py:83} INFO - Using connection ID 'postgres_connection' for task execution.
[2024-02-15T19:51:59.401+0000] {sql.py:450} INFO - Running statement: INSERT IGNORE INTO ***.companies(name, catchPhrase, bs) VALUES ('Romaguera-Crona','Multi-layered client-server neural-net', 'harness real-time e-markets') ON CONFLICT DO NOTHING;, parameters: None
[2024-02-15T19:51:59.416+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 241, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/CRM.py", line 79, in Load_companies_registers
    company_register.save()
  File "/opt/airflow/dags/models/Company.py", line 21, in save
    postgres_hook.run(postgres_statement)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "IGNORE"
LINE 1: INSERT IGNORE INTO ***.companies(name, catchPhrase, bs) ...
               ^

[2024-02-15T19:51:59.466+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=Read_and_load_of_API_to_MySQLDB, task_id=Load_companies_registers, execution_date=20240204T000000, start_date=20240215T195158, end_date=20240215T195159
[2024-02-15T19:51:59.527+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 313 for task Load_companies_registers (syntax error at or near "IGNORE"
LINE 1: INSERT IGNORE INTO ***.companies(name, catchPhrase, bs) ...
               ^
; 922)
[2024-02-15T19:51:59.566+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-15T19:51:59.629+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
